<resources>
    <string name="app_name">Jetpack2Exercise</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="user_name">User Name</string>
    <string name="user_email">User Email</string>
    <string name="user_phone_number">User Phone Number</string>
    <string name="submit">Submit</string>
    <string name="add_user">Add User</string>
    <string name="user_description">User Description</string>
</resources>
